# droidrun

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
.github/workflows/droidrun-0.3.2/: README.md  pyproject.toml
.github/workflows/droidrun-0.3.2/docs/v3/concepts/: agent.mdx
.github/workflows/droidrun-0.3.2/docs/v3/guides/: cli.mdx  gemini.mdx
.github/workflows/droidrun-0.3.2/docs/v3/sdk/: adb-tools.mdx  adb-utils.mdx  base-tools.mdx
.github/workflows/droidrun-0.3.2/droidrun/: __init__.py  portal.py
.github/workflows/droidrun-0.3.2/droidrun/agent/codeact/: codeact_agent.py
.github/workflows/droidrun-0.3.2/droidrun/agent/context/: task_manager.py
.github/workflows/droidrun-0.3.2/droidrun/agent/droid/: events.py
.github/workflows/droidrun-0.3.2/droidrun/agent/planner/: events.py
.github/workflows/droidrun-0.3.2/droidrun/agent/utils/: chat_utils.py  executer.py  llm_picker.py
.github/workflows/droidrun-0.3.2/droidrun/telemetry/: events.py
.github/workflows/droidrun-0.3.2/droidrun/tools/: ios.py
docs/: .generated-files.txt  conf.py  docs.json  installation.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/concepts/: agent.mdx  android-control.mdx  llm-providers.mdx
docs/v2/: overview.mdx  quickstart.mdx
docs/v2/concepts/: agent.mdx  planning.mdx  tracing.mdx
docs/v3/: overview.mdx  quickstart.mdx
docs/v3/concepts/: agent.mdx  android-control.mdx  android-tools.mdx  ios-control.mdx  models.mdx  portal-app.mdx  tracing.mdx
docs/v3/guides/: gemini.mdx  ollama.mdx  openailike.mdx  overview.mdx  telemetry.mdx
docs/v3/sdk/: adb-tools.mdx  adb-utils.mdx  adb.md  agent.md  base-tools.mdx  droid-agent.mdx  ios-tools.mdx  tools.md
droidrun/: __init__.py  __main__.py  portal.py
droidrun/adb/: __init__.py  device.py  manager.py  wrapper.py
droidrun/agent/: __init__.py  llm_provider.py  llm_reasoning.py  react_agent.py  tool_docs.py
droidrun/agent/codeact/: __init__.py  codeact_agent.py  events.py  prompts.py
droidrun/agent/common/: events.py
droidrun/agent/context/: __init__.py  agent_persona.py  context_injection_manager.py  episodic_memory.py  task_manager.py
droidrun/agent/context/personas/: __init__.py  app_starter.py  default.py  extractor.py  ui_expert.py
droidrun/agent/droid/: __init__.py  droid_agent.py  events.py
droidrun/agent/droidagent/: __init__.py  droidagent.py
droidrun/agent/oneflows/: reflector.py
droidrun/agent/planner/: __init__.py  events.py  planner_agent.py  prompts.py  workflow.py
droidrun/agent/providers/: __init__.py  anthropic_provider.py  deepseek_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
droidrun/agent/utils/: __init__.py  async_utils.py  chat_utils.py  executer.py  llm_picker.py  task_manager.py  trajectory.py
droidrun/agent/workflows/: open_app.py
droidrun/cli/: __init__.py  event_handler.py  logs.py  main.py
droidrun/llm/: __init__.py
droidrun/telemetry/: __init__.py  events.py  tracker.py
droidrun/tools/: __init__.py  actions.py  adb.py  device.py  ios.py  loader.py  memory_store.py  remember.py  tools.py
eval/: README.md  __init__.py  android_world_bench.py  run_benchmark.sh  task_progress.json
eval/utils/: accessibility.py  agent.py  environment.py  keepalive.py  keepalive_script.py  results.py  task_manager.py
examples/: run_with_gemini.py
