[project]
name = "droidrun"
version = "0.3.1"
description = "A framework for controlling Android devices through LLM agents"
authors = [
    {name = "Niels Schmidt", email = "niels.schmidt@droidrun.ai"},
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "llama-index",
    "llama-index-callbacks-arize-phoenix",
    "arize-phoenix",
    "llama-index-llms-openai",
    "llama-index-llms-openai-like",
    "llama-index-llms-google-genai",
    "llama-index-llms-deepseek",
    "llama-index-llms-anthropic",
    "llama-index-llms-ollama",
    "posthog==6.0.2"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Emulators",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/droidrun/droidrun"
"Bug Tracker" = "https://github.com/droidrun/droidrun/issues"
Documentation = "https://docs.droidrun.ai/"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["droidrun"]

[project.scripts]
droidrun = "droidrun.cli.main:cli"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
] 

[[tool.pydoc-markdown.loaders]]
type = "python"
packages = [ "droidrun" ]
modules = [ "droidrun" ]

[tool.pydoc-markdown.renderer]
type = "hugo"
content_directory = "../../docs/v3/sdk"

[tool.pydoc-markdown.renderer.markdown]
classdef_with_decorators = false
signature_with_decorators = false
data_code_block = true
descriptive_class_title = false
render_module_header = true
format_code_style = "facebook"
add_full_prefix = true
sub_prefix = true
header_level_by_type = {Module = 1, Class = 2, Method = 4, Function = 4, Variable = 4}

[[tool.pydoc-markdown.renderer.pages]]
title = "Agent"
name = "agent"
contents = [ 
    "droidrun.agent.*",
]

[[tool.pydoc-markdown.renderer.pages]]
title = "Tools"
name = "tools"
contents = [
    "droidrun.tools.*",
]

[[tool.pydoc-markdown.renderer.pages]]
title = "Adb"
name = "adb"
contents = [
    "droidrun.adb.*",
]